--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         Add a button here for dark mode or mobile menu later 
         <button id="theme-toggle">Toggle Theme</button>
       -->
+        <button class = "btn theme-toggle" id="theme-toggle">
+          Toggle Theme
+        </button>
     </nav>
   </header>
 
